package edu.fiuba.algo3.modelo.Jugador;

public class Jugador {

    private String nombre;
    private String color;
    private Raza raza;

    public void setNombre(String unNombre){
        nombre = unNombre;
    }

    public void setColor(String unColor){
        color = unColor;
    }

    public void setRaza(Raza unaRaza){
        raza = unaRaza;
    }
}
