package edu.fiuba.algo3.modelo.Mapa.Casilla;

public class Vacia {
}
