package edu.fiuba.algo3.modelo.Mapa.Terreno;

public class SinNada {
}
