package edu.fiuba.algo3.modelo.Mapa.Terreno;

public interface Terreno {
}
