package edu.fiuba.algo3.modelo.Recursos;

public class Recursos {

    private int cantidad;
}
