package edu.fiuba.algo3.modelo.Unidades;

public abstract class Unidad {

    protected int vida;
}
